--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "5.0.0-beta.46",
+    "@sentry/nextjs": "^7.105.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@uploadthing/react": "^6.5.1",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
-    "next": "^14.2.1",
+    "next": "^14.2.3",
     "postgres": "^3.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "server-only": "^0.0.1",
     "uploadthing": "^6.10.1",
     "zod": "^3.22.4"
@@ -34,7 +35,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "drizzle-kit": "^0.20.16",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "eslint-config-next": "^14.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "pg": "^8.11.3",
     "postcss": "^8.4.34",
