--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.3",
+    "posthog-js": "^1.130.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "server-only": "^0.0.1",
