--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.3.0",
     "postgres": "^3.4.3",
     "posthog-js": "^1.130.2",
+    "posthog-node": "^4.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "server-only": "^0.0.1",
